[package]
name = "test_depth_compare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"]}
tokio = { version = "1.19.2", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.12", features = ["json"]}
http = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
ordered-float = "3.3.0"
csv = "1.1"
sha2 = "0.10"
hmac = "0.12"
hex-literal = "0.3"